# usb-reset

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Makefile.am  usbreset.man
src/: Makefile.am  main.c
